<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppTheme">
    <item
        android:id="@+id/rename_file_m"
        android:orderInCategory="100"
        android:title="@string/rename"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/open_file_m"
        android:orderInCategory="100"
        android:title="@string/open"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/duplicate_file_m"
        android:orderInCategory="100"
        android:title="@string/duplicate"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/encoding_file_m"
        android:orderInCategory="100"
        android:title="@string/encoding_1"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/send_m"
        android:orderInCategory="100"
        android:title="Send"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/save_to_m"
        android:orderInCategory="100"
        android:title="@string/save_to"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/delete_file_m"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never"
        />
</menu>