<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/delete_all_dialog"
    android:background="#121212">


    <TextView
        android:id="@+id/deleteAllTextView"
        android:layout_width="272dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/delete_all_files_sure"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/button_delete_all_files"
        android:layout_width="126dp"
        android:layout_height="25dp"
        android:background="@drawable/button_border_white"
        android:text="@string/delete"
        android:textColor="#950000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <Button
        android:id="@+id/button_cancel_delete_all_files"
        android:layout_width="126dp"
        android:layout_height="25dp"
        android:background="@drawable/button_border_white"
        android:text="@string/cancel"
        android:textColor="#007A05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />
</androidx.constraintlayout.widget.ConstraintLayout>