<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save_in_dialog_id"
    android:layout_width="330dp"
    android:layout_height="250dp"
    android:background="#121212">


    <TextView
        android:id="@+id/textViewPath"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:gravity="center|end"
        android:text="@string/directoryPath"
        android:textColor="#DADADA"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />


    <TextView
        android:id="@+id/textViewEncoding"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:gravity="center|end"
        android:text="@string/encoding"
        android:textColor="#DADADA"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/pathTextView"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text=""
        android:textColor="#C1C1C1"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <TextView
        android:id="@+id/textViewFormat"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:gravity="center|end"
        android:text="@string/format"
        android:textColor="#DADADA"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textViewNameFile"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:gravity="center|end"
        android:text="@string/name"
        android:textColor="#DADADA"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Spinner
        android:theme="@style/SpinnerStyle"
        android:id="@+id/spinnerEncoding"
        android:layout_width="175dp"
        android:layout_height="23dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:id="@+id/textNameSaveIn"
        android:layout_width="175dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="#121212"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/textFormatSaveIn"
        android:layout_width="175dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/txt"
        android:textColorHint="#ACACAC"
        android:hint=""
        android:background="#121212"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonSaveIn"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:background="@drawable/button_border_white"
        android:text="@string/save"
        android:textColor="#00887C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/buttonNoSaveIn"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:background="@drawable/button_border_white"
        android:text="@string/cancel"
        android:textColor="#980034"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />
</androidx.constraintlayout.widget.ConstraintLayout>