<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/encoding_dialog_id"
    android:background="#121212">


    <TextView
        android:id="@+id/textViewEncoding_Dialog"
        android:layout_width="240dp"
        android:layout_height="29dp"
        android:gravity="center|end"
        android:text="@string/encoding_converter"
        android:textColor="#FF9800"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/from_spinnerEncoding_in_EncodingDialog"
        android:layout_width="175dp"
        android:layout_height="23dp"
        android:spinnerMode="dialog"
        android:theme="@style/SpinnerStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <Spinner
        android:id="@+id/spinnerEncoding_in_EncodingDialog"
        android:layout_width="175dp"
        android:layout_height="23dp"
        android:spinnerMode="dialog"
        android:theme="@style/SpinnerStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/button_save_encoding_dialog"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:background="@drawable/button_border_white"
        android:text="@string/encoding_1"
        android:textColor="#00887C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/button_cancel_encoding_dialog"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:background="@drawable/button_border_white"
        android:text="@string/cancel"
        android:textColor="#980034"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/textViewEncoding_Dialog_from"
        android:layout_width="85dp"
        android:layout_height="23dp"
        android:gravity="end"
        android:textColor="#FF9800"
        android:text="@string/from"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/textViewEncoding_Dialog_to"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:gravity="end"
        android:textColor="#FF9800"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

</androidx.constraintlayout.widget.ConstraintLayout>